# ics9-compilers

./: .gitignore
module1/lab2/: main.go  test.txt
module1/lab3/: settings.gradle.kts  test.txt
module1/lab3/src/main/kotlin/: Main.kt
module1/lab3/src/main/kotlin/lexer/: Compiler.kt  Fragment.kt  Message.kt  NameDictionary.kt  Position.kt  Scanner.kt  util.kt
module1/lab3/src/main/kotlin/lexer/tokens/: EOPToken.kt  ForToken.kt  IdentToken.kt  IfToken.kt  M1Token.kt  Token.kt  TokenDomain.kt
module1/lab5/: CMakeLists.txt  lab5.l  lexer.cpp  lexer.hpp  main.cpp  test.txt
module2/lab1/: main.go
module2/lab1/example/: example.go
module2/lab2/: main.py  report.md  test.txt
module3/lab2/: Makefile  input.txt  lexer.l  parser.y
module3/lab3/: main.py
